--- a/biblioteca/templates/libro_detalle.html
+++ b/biblioteca/templates/libro_detalle.html
@@ -80,6 +80,7 @@
                 <p><strong>Autor:</strong> {{ libro.autor }}</p>
                 <p><strong>Editorial:</strong> {{ libro.editorial }}</p>
                 <p><strong>Sección:</strong> {{ libro.seccion }}</p>
+                <p><strong>Código:</strong> {{ libro.codigo_libro }}</p>
                 
                 <div class="avg-rating">
                     <h4>Calificación Promedio:</h4>
